fixed bg image issue not showing on large mixin

--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -31,7 +31,7 @@
 
     @mixin atLarge {
     background: url('/assets/images/testimonials-bg.jpg') top center no-repeat;
-    background-size: cover;
+  
    }
   }
 }
